--- a/index.html
+++ b/index.html
@@ -5,9 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cadastro de Membro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <style>
     body {
-      padding-top: 70px; /* espaço para navbar fixa */
+      padding-top: 70px;
+      background-color: #f8f9fa;
+    }
+    .form-container {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+    .section-title {
+      color: #495057;
+      border-bottom: 2px solid #dee2e6;
+      padding-bottom: 8px;
+      margin-bottom: 20px;
+    }
+    .form-label {
+      font-weight: 500;
+      color: #495057;
+    }
+    .form-control, .form-select {
+      border-radius: 8px;
+      padding: 10px;
     }
     #preview {
       display: none;
@@ -15,18 +39,18 @@
       height: 120px;
       object-fit: cover;
       border-radius: 50%;
-      margin: 20px auto;
-      box-shadow: 0 0 5px rgba(0,0,0,0.3);
+      margin: 0 auto 15px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    .form-container {
-      max-width: 500px;
-      margin: auto;
+    .divider {
+      border-top: 1px dashed #dee2e6;
+      margin: 20px 0;
     }
   </style>
 </head>
 <body>
 
-  <!-- 🔹 Navbar fixa no topo -->
+  <!-- Navbar fixa no topo -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Cadastro da Igreja</a>
@@ -47,59 +71,76 @@
     </div>
   </nav>
 
-  <!-- 🔹 Formulário de cadastro -->
-<div class="container form-container">
-  <h2 class="text-center mt-3">Cadastro de Membro</h2>
-  <form id="form-membro" class="mt-4 text-center">
-  
-    <!-- Miniatura redonda centralizada -->
-    <img id="preview" alt="Prévia da Foto">
+  <!-- Formulário de cadastro -->
+  <div class="container py-4">
+    <div class="form-container">
+      <h2 class="text-center mb-4">1</h2>
+      <h3 class="section-title">Dados Pessoais</h3>
+      
+      <form id="form-membro">
+        <!-- Foto -->
+        <div class="text-center mb-4">
+          <img id="preview" alt="Prévia da Foto">
+          <label class="btn btn-outline-primary">
+            <i class="fas fa-camera me-2"></i>Selecionar / Tirar Foto
+            <input type="file" id="foto" accept="image/*" class="d-none" required>
+          </label>
+        </div>
 
-    <!-- Botão de seleção abaixo da miniatura -->
-    <div class="mb-3">
-      <label class="btn btn-outline-primary">
-        Selecionar / Tirar Foto
-        <input type="file" id="foto" accept="image/*" class="d-none" required>
-      </label>
-    </div>
+        <!-- Nome Completo -->
+        <div class="mb-4">
+          <h5 class="form-label">Nome Completo*</h5>
+          <input type="text" name="nome" class="form-control" placeholder="Digite seu nome completo" required>
+        </div>
 
-    <!-- Campos do formulário -->
-    <div class="mb-3 text-start">
-      <label class="form-label">Nome</label>
-      <input type="text" name="nome" class="form-control" required>
-    </div>
-    <div class="mb-3 text-start">
-      <label class="form-label">Endereço</label>
-      <input type="text" name="endereco" class="form-control" required>
-    </div>
-    <div class="mb-3 text-start">
-      <label class="form-label">Data de Batismo</label>
-      <input type="date" name="batismo" class="form-control" required>
-    </div>
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <h5 class="form-label">CPF*</h5>
+            <input type="text" name="cpf" class="form-control" placeholder="000.000.000-00" required>
+          </div>
+          <div class="col-md-6 mb-3">
+            <h5 class="form-label">Telefone*</h5>
+            <input type="tel" name="telefone" class="form-control" placeholder="(00) 00000-0000" required>
+          </div>
+        </div>
 
-    <div class="mb-3 text-start">
-      <label class="form-label">Data de Nascimento</label>
-      <input type="date" name="nascimento" class="form-control" required>
-    </div>
+        <div class="divider"></div>
 
-    
-    <div class="mb-3 text-start">
-      <label class="form-label">Função</label>
-      <select name="funcao" class="form-select" required>
-        <option value="">Selecione a função</option>
-        <option value="membro">Membro</option>
-        <option value="diacono">Diácono</option>
-        <option value="pastor">Pastor</option>
-      </select>
-    </div>
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <h5 class="form-label">Data de Nascimento*</h5>
+            <input type="date" name="nascimento" class="form-control" required>
+          </div>
+          <div class="col-md-6 mb-3">
+            <h5 class="form-label">RG</h5>
+            <input type="text" name="rg" class="form-control" placeholder="00.000.000-0">
+          </div>
+        </div>
 
-    <!-- Botão cadastrar -->
-    <div class="d-grid">
-      <button type="submit" class="btn btn-success">Cadastrar</button>
-    </div>
-  </form>
-</div>
+        <div class="mb-4">
+          <h5 class="form-label">E-mail*</h5>
+          <input type="email" name="email" class="form-control" placeholder="seu@email.com" required>
+        </div>
 
+        <div class="divider"></div>
+
+        <div class="mb-4">
+          <h5 class="form-label">3</h5>
+          <h5 class="form-label">Espiritual</h5>
+          <!-- Adicione aqui os campos espirituais conforme necessário -->
+        </div>
+
+        <div class="mb-4">
+          <h5 class="form-label">Data de Cláusula</h5>
+          <input type="date" name="clausula" class="form-control">
+        </div>
+
+        <div class="d-grid mt-4">
+          <button type="submit" class="btn btn-success btn-lg">Cadastrar</button>
+        </div>
+      </form>
+    </div>
+  </div>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
