--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
     </div>
   </nav>
 
+  
+  
+  <div class="container mx-auto px-4 py-8">
+        <!-- Header -->
+        <header class="text-center mb-12">
+            <div class="bg-indigo-700 text-white rounded-xl p-6 shadow-lg max-w-4xl mx-auto">
+                <h1 class="text-3xl md:text-4xl font-bold mb-2">
+                    <i class="fas fa-user-plus mr-2"></i> Cadastro de Membros
+                </h1>
+                <p class="text-white/90">Preencha o formulário abaixo para se registrar como membro da nossa comunidade</p>
+            </div>
+        </header>
+
+  
   <!-- 🔹 Formulário de cadastro -->
 <div class="container form-container">
   <h2 class="text-center mt-3">Cadastro de Membro</h2>
