--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
   </form>
 </div>
-
+  </div>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
