--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     .form-container {
-      max-width: 600px;
+      max-width: 800px;
       margin: auto;
       background: white;
       padding: 2rem;
@@ -36,7 +36,7 @@
       color: #374151;
       margin-bottom: 0.5rem;
     }
-    .form-control, .form-select {
+    .form-control {
       width: 100%;
       padding: 0.75rem 1rem;
       font-size: 0.875rem;
@@ -44,7 +44,7 @@
       border-radius: 8px;
       transition: border-color 0.2s, box-shadow 0.2s;
     }
-    .form-control:focus, .form-select:focus {
+    .form-control:focus {
       border-color: #6366f1;
       outline: none;
       box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.1);
@@ -78,6 +78,7 @@
       font-weight: 500;
       border-radius: 8px;
       transition: background-color 0.2s;
+      width: 100%;
     }
     .btn-submit:hover {
       background-color: #4338ca;
@@ -86,6 +87,16 @@
       content: '*';
       color: #ef4444;
       margin-left: 2px;
+    }
+    .form-grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 1.5rem;
+    }
+    @media (min-width: 768px) {
+      .form-grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
     }
   </style>
 </head>
@@ -126,23 +137,26 @@
         </div>
       </div>
 
-      <div class="mb-4">
-        <label for="nome" class="form-label required-field">Nome Completo</label>
-        <div class="relative">
-          <input type="text" id="nome" name="nome" class="form-control" required placeholder="Digite o nome completo">
-          <i class="fas fa-user input-icon"></i>
+      <div class="form-grid">
+        <!-- Coluna 1 -->
+        <div>
+          <label for="nome" class="form-label required-field">Nome Completo</label>
+          <div class="relative">
+            <input type="text" id="nome" name="nome" class="form-control" required placeholder="Digite o nome completo">
+            <i class="fas fa-user input-icon"></i>
+          </div>
         </div>
-      </div>
 
-      <div class="mb-4">
-        <label for="endereco" class="form-label required-field">Endereço</label>
-        <div class="relative">
-          <input type="text" id="endereco" name="endereco" class="form-control" required placeholder="Digite o endereço completo">
-          <i class="fas fa-map-marker-alt input-icon"></i>
+        <!-- Coluna 2 -->
+        <div>
+          <label for="endereco" class="form-label required-field">Endereço</label>
+          <div class="relative">
+            <input type="text" id="endereco" name="endereco" class="form-control" required placeholder="Digite o endereço completo">
+            <i class="fas fa-map-marker-alt input-icon"></i>
+          </div>
         </div>
-      </div>
 
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
+        <!-- Coluna 1 -->
         <div>
           <label for="batismo" class="form-label required-field">Data de Batismo</label>
           <div class="relative">
@@ -150,6 +164,8 @@
             <i class="fas fa-calendar-check input-icon"></i>
           </div>
         </div>
+
+        <!-- Coluna 2 -->
         <div>
           <label for="nascimento" class="form-label required-field">Data de Nascimento</label>
           <div class="relative">
@@ -157,22 +173,23 @@
             <i class="fas fa-birthday-cake input-icon"></i>
           </div>
         </div>
-      </div>
 
-      <div class="mb-6">
-        <label for="funcao" class="form-label required-field">Função</label>
-        <div class="relative">
-          <select id="funcao" name="funcao" class="form-select" required>
-            <option value="">Selecione a função</option>
-            <option value="membro">Membro</option>
-            <option value="diacono">Diácono</option>
-            <option value="pastor">Pastor</option>
-          </select>
-          <i class="fas fa-user-tag input-icon"></i>
+        <!-- Função (ocupa duas colunas em desktop) -->
+        <div class="md:col-span-2">
+          <label for="funcao" class="form-label required-field">Função</label>
+          <div class="relative">
+            <select id="funcao" name="funcao" class="form-control" required>
+              <option value="">Selecione a função</option>
+              <option value="membro">Membro</option>
+              <option value="diacono">Diácono</option>
+              <option value="pastor">Pastor</option>
+            </select>
+            <i class="fas fa-user-tag input-icon"></i>
+          </div>
         </div>
       </div>
 
-      <div class="d-grid">
+      <div class="mt-8">
         <button type="submit" class="btn btn-primary btn-submit">
           <i class="fas fa-save mr-2"></i>Cadastrar Membro
         </button>
