--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
     }
     .btn-submit {
       background-color: #4f46e5;
-      padding: 0.75rem 1.5rem;
+      padding: 0.5rem 1.25rem;
       font-weight: 500;
       border-radius: 8px;
       transition: background-color 0.2s;
-      width: 100%;
+      width: auto;
+      margin: 2rem auto 0;
+      display: block;
     }
     .btn-submit:hover {
       background-color: #4338ca;
@@ -189,8 +191,8 @@
         </div>
       </div>
 
-      <div class="mt-8">
-        <button type="submit" class="btn btn-primary btn-submit">
+      <div class="text-center">
+        <button type="submit" class="btn-submit">
           <i class="fas fa-save mr-2"></i>Cadastrar Membro
         </button>
       </div>
