--- a/index.html
+++ b/index.html
@@ -6,117 +6,25 @@
   <title>Cadastro de Membro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <style>
-    body {
-      padding-top: 70px;
-      background-color: #f9fafb;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    .form-container {
-      max-width: 800px;
-      margin: auto;
-      background: white;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
-    }
-    #preview {
-      display: none;
-      width: 120px;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 50%;
-      margin: 20px auto;
-      border: 3px solid #e5e7eb;
-    }
-    .form-label {
-      display: block;
-      font-size: 0.875rem;
-      font-weight: 500;
-      color: #374151;
-      margin-bottom: 0.5rem;
-    }
-    .form-control {
-      width: 100%;
-      padding: 0.75rem 1rem;
-      font-size: 0.875rem;
-      border: 1px solid #d1d5db;
-      border-radius: 8px;
-      transition: border-color 0.2s, box-shadow 0.2s;
-    }
-    .form-control:focus {
-      border-color: #6366f1;
-      outline: none;
-      box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.1);
-    }
-    .input-icon {
-      position: absolute;
-      right: 1rem;
-      top: 50%;
-      transform: translateY(-50%);
-      color: #9ca3af;
-    }
-    .btn-upload {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-      padding: 0.75rem 1.5rem;
-      background-color: #f3f4f6;
-      border: 1px dashed #d1d5db;
-      border-radius: 8px;
-      color: #4b5563;
-      font-weight: 500;
-      transition: all 0.2s;
-    }
-    .btn-upload:hover {
-      background-color: #e5e7eb;
-      border-color: #9ca3af;
-    }
-    .btn-submit {
-      background-color: #4f46e5;
-      padding: 0.5rem 1.25rem;
-      font-weight: 500;
-      border-radius: 8px;
-      transition: background-color 0.2s;
-      width: auto;
-      margin: 2rem auto 0;
-      display: block;
-    }
-    .btn-submit:hover {
-      background-color: #4338ca;
-    }
-    .required-field::after {
-      content: '*';
-      color: #ef4444;
-      margin-left: 2px;
-    }
-    .form-grid {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 1.5rem;
-    }
-    @media (min-width: 768px) {
-      .form-grid {
-        grid-template-columns: repeat(2, 1fr);
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <div class="container">
       <a class="navbar-brand" href="#">Cadastro da Igreja</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="menuNav">
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Cadastro</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="listagem.html">Listagem</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="aniversariantes.html">Aniversariantes</a>
           </li>
         </ul>
@@ -125,7 +33,7 @@
   </nav>
 
   <div class="container form-container my-4">
-    <h2 class="text-center mb-6" style="color: #111827; font-weight: 600;">Cadastro de Membro</h2>
+    <h2 class="text-center mb-6">Cadastro de Membro</h2>
     <form id="form-membro">
       
       <div class="text-center mb-6">
@@ -177,7 +85,7 @@
         </div>
 
         <!-- Função (ocupa duas colunas em desktop) -->
-        <div class="md:col-span-2">
+        <div class="md-col-span-2">
           <label for="funcao" class="form-label required-field">Função</label>
           <div class="relative">
             <select id="funcao" name="funcao" class="form-control" required>
