--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
       </div>
 
       <div class="text-center">
-        <button type="submit" class="btn-submit">
-          <i class="fas fa-save mr-2"></i>Cadastrar Membro
+        <button type="submit" class="btn btn-primary px-4">
+          Cadastrar Membro
         </button>
       </div>
     </form>
