--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <label for="nome" class="form-label required-field">Nome Completo</label>
           <div class="relative">
             <input type="text" id="nome" name="nome" class="form-control" required placeholder="Digite o nome completo">
-         
+           <i class="fas fa-user input-icon"></i>
           </div>
         </div>
 
