--- a/ficha.html
+++ b/ficha.html
@@ -20,17 +20,23 @@
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Cadastro Igreja</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="#">Ficha</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Cadastro</a></li>
-          <li class="nav-item"><a class="nav-link" href="listagem.html">Listagem</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Cadastro</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="listagem.html">Listagem</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="ficha.html">Aniversariantes</a>
+          </li>
         </ul>
       </div>
     </div>
