--- a/listagem.html
+++ b/listagem.html
@@ -40,7 +40,7 @@
   <!-- 🔹 Navbar fixa no topo -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Cadastro da Igreja</a>
+      <a class="navbar-brand" href="#">Listagem</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
