--- a/index.html
+++ b/index.html
@@ -104,6 +104,24 @@
            <i class="fas fa-birthday-cake input-icon"></i>
           </div>
         </div>
+
+        <div>
+         <label class="block text-sm font-medium text-gray-700 mb-1">Gênero*</label>
+          <div class="flex space-x-4">
+         <label class="inline-flex items-center">
+            <input type="radio" name="gender" value="masculino" required class="text-indigo-600 focus:ring-indigo-500">
+           <span class="ml-2">Masculino</span>
+          </label>
+           <label class="inline-flex items-center">
+           <input type="radio" name="gender" value="feminino" class="text-indigo-600 focus:ring-indigo-500">
+            <span class="ml-2">Feminino</span>
+           </label>
+              <label class="inline-flex items-center">
+               <input type="radio" name="gender" value="outro" class="text-indigo-600 focus:ring-indigo-500">
+                   <span class="ml-2">Outro</span>
+               </label>
+            </div>
+         </div>
         
       </div>
 
