--- a/index.html
+++ b/index.html
@@ -97,14 +97,18 @@
            <i class="fas fa-user-tag input-icon"></i>
           </div>
         </div>
-         <div>
-          <label for="nascimento" class="form-label required-field">Data de Nascimento</label>
+
+        //campo telefone
+        <div class="mb-4">
+          <label for="telefone" class="form-label required-field">Telefone</label>
           <div class="relative">
-            <input type="date" id="nascimento" name="nascimento" class="form-control" required>
-           <i class="fas fa-birthday-cake input-icon"></i>
+            <input type="text" id="telefone" name="telefone" class="form-control" required 
+                   placeholder="(00) 00000-0000" maxlength="15">
+            <i class="fas fa-phone input-icon"></i>
           </div>
         </div>
-
+        
+         //campo seleção de sexo
         <div class="mb-4">
           <label class="form-label required-field">Sexo</label>
           <div class="radio-group">
