--- a/ficha.html
+++ b/ficha.html
@@ -88,7 +88,7 @@
 
           document.getElementById("telefone").textContent = membro.telefone;
 
-          document.getElementById("telefone").textContent = membro.telefone;
+          document.getElementById("sexo").textContent = membro.sexo;
 
 
 
