--- a/index.html
+++ b/index.html
@@ -6,25 +6,104 @@
   <title>Cadastro de Membro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      padding-top: 70px;
+      background-color: #f9fafb;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .form-container {
+      max-width: 600px;
+      margin: auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+    }
+    #preview {
+      display: none;
+      width: 120px;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin: 20px auto;
+      border: 3px solid #e5e7eb;
+    }
+    .form-label {
+      display: block;
+      font-size: 0.875rem;
+      font-weight: 500;
+      color: #374151;
+      margin-bottom: 0.5rem;
+    }
+    .form-control, .form-select {
+      width: 100%;
+      padding: 0.75rem 1rem;
+      font-size: 0.875rem;
+      border: 1px solid #d1d5db;
+      border-radius: 8px;
+      transition: border-color 0.2s, box-shadow 0.2s;
+    }
+    .form-control:focus, .form-select:focus {
+      border-color: #6366f1;
+      outline: none;
+      box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.1);
+    }
+    .input-icon {
+      position: absolute;
+      right: 1rem;
+      top: 50%;
+      transform: translateY(-50%);
+      color: #9ca3af;
+    }
+    .btn-upload {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 0.75rem 1.5rem;
+      background-color: #f3f4f6;
+      border: 1px dashed #d1d5db;
+      border-radius: 8px;
+      color: #4b5563;
+      font-weight: 500;
+      transition: all 0.2s;
+    }
+    .btn-upload:hover {
+      background-color: #e5e7eb;
+      border-color: #9ca3af;
+    }
+    .btn-submit {
+      background-color: #4f46e5;
+      padding: 0.75rem 1.5rem;
+      font-weight: 500;
+      border-radius: 8px;
+      transition: background-color 0.2s;
+    }
+    .btn-submit:hover {
+      background-color: #4338ca;
+    }
+    .required-field::after {
+      content: '*';
+      color: #ef4444;
+      margin-left: 2px;
+    }
+  </style>
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
       <a class="navbar-brand" href="#">Cadastro da Igreja</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="menuNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Cadastro</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="listagem.html">Listagem</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="aniversariantes.html">Aniversariantes</a>
           </li>
         </ul>
@@ -33,7 +112,7 @@
   </nav>
 
   <div class="container form-container my-4">
-    <h2 class="text-center mb-6">Cadastro de Membro</h2>
+    <h2 class="text-center mb-6" style="color: #111827; font-weight: 600;">Cadastro de Membro</h2>
     <form id="form-membro">
       
       <div class="text-center mb-6">
@@ -47,26 +126,23 @@
         </div>
       </div>
 
-      <div class="form-grid">
-        <!-- Coluna 1 -->
-        <div>
-          <label for="nome" class="form-label required-field">Nome Completo</label>
-          <div class="relative">
-            <input type="text" id="nome" name="nome" class="form-control" required placeholder="Digite o nome completo">
-            <i class="fas fa-user input-icon"></i>
-          </div>
+      <div class="mb-4">
+        <label for="nome" class="form-label required-field">Nome Completo</label>
+        <div class="relative">
+          <input type="text" id="nome" name="nome" class="form-control" required placeholder="Digite o nome completo">
+          <i class="fas fa-user input-icon"></i>
         </div>
+      </div>
 
-        <!-- Coluna 2 -->
-        <div>
-          <label for="endereco" class="form-label required-field">Endereço</label>
-          <div class="relative">
-            <input type="text" id="endereco" name="endereco" class="form-control" required placeholder="Digite o endereço completo">
-            <i class="fas fa-map-marker-alt input-icon"></i>
-          </div>
+      <div class="mb-4">
+        <label for="endereco" class="form-label required-field">Endereço</label>
+        <div class="relative">
+          <input type="text" id="endereco" name="endereco" class="form-control" required placeholder="Digite o endereço completo">
+          <i class="fas fa-map-marker-alt input-icon"></i>
         </div>
+      </div>
 
-        <!-- Coluna 1 -->
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
         <div>
           <label for="batismo" class="form-label required-field">Data de Batismo</label>
           <div class="relative">
@@ -74,8 +150,6 @@
             <i class="fas fa-calendar-check input-icon"></i>
           </div>
         </div>
-
-        <!-- Coluna 2 -->
         <div>
           <label for="nascimento" class="form-label required-field">Data de Nascimento</label>
           <div class="relative">
@@ -83,24 +157,23 @@
             <i class="fas fa-birthday-cake input-icon"></i>
           </div>
         </div>
+      </div>
 
-        <!-- Função (ocupa duas colunas em desktop) -->
-        <div class="md-col-span-2">
-          <label for="funcao" class="form-label required-field">Função</label>
-          <div class="relative">
-            <select id="funcao" name="funcao" class="form-control" required>
-              <option value="">Selecione a função</option>
-              <option value="membro">Membro</option>
-              <option value="diacono">Diácono</option>
-              <option value="pastor">Pastor</option>
-            </select>
-            <i class="fas fa-user-tag input-icon"></i>
-          </div>
+      <div class="mb-6">
+        <label for="funcao" class="form-label required-field">Função</label>
+        <div class="relative">
+          <select id="funcao" name="funcao" class="form-select" required>
+            <option value="">Selecione a função</option>
+            <option value="membro">Membro</option>
+            <option value="diacono">Diácono</option>
+            <option value="pastor">Pastor</option>
+          </select>
+          <i class="fas fa-user-tag input-icon"></i>
         </div>
       </div>
 
-      <div class="text-center">
-        <button type="submit" class="btn-submit">
+      <div class="d-grid">
+        <button type="submit" class="btn btn-primary btn-submit">
           <i class="fas fa-save mr-2"></i>Cadastrar Membro
         </button>
       </div>
