--- a/index.html
+++ b/index.html
@@ -97,6 +97,22 @@
             <i class="fas fa-user-tag input-icon"></i>
           </div>
         </div>
+        <div class="mb-4">
+          <label class="form-label required-field">Sexo</label>
+          <div class="radio-group">
+            <label class="radio-option">
+              <input type="radio" name="sexo" value="masculino" required>
+              <span class="radio-custom"></span>
+              Masculino
+            </label>
+            <label class="radio-option">
+              <input type="radio" name="sexo" value="feminino">
+              <span class="radio-custom"></span>
+              Feminino
+            </label>
+          </div>
+        </div>
+        
       </div>
 
       <div class="text-center">
