--- a/index.html
+++ b/index.html
@@ -98,6 +98,16 @@
           </div>
         </div>
 
+        <!-- Campo Telefone -->
+        <div class="mb-4">
+          <label for="telefone" class="form-label required-field">Telefone</label>
+          <div class="relative">
+            <input type="text" id="telefone" name="telefone" class="form-control" required 
+                   placeholder="(00) 00000-0000" maxlength="15">
+            <i class="fas fa-phone input-icon"></i>
+          </div>
+        </div>
+
          <!-- Campo Sexo -->
         <div class="mb-4">
           <label class="form-label required-field">Sexo</label>
