--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
             <input type="text" id="cep" name="cep" class="form-control" required 
                    placeholder="00000-000" maxlength="9">
             <i class="fas fa-map-pin input-icon"></i>
+            <button type="button" id="searchCep" class="ml-2 px-4 py-2 bg-indigo-100 text-indigo-700 rounded-lg hover:bg-indigo-200 transition">
+              <i class="fas fa-search mr-1"></i> Buscar
+            </button>
           </div>
         </div>
 
