--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Busca de CEP</title>
+  <title>Cadastro com Busca de CEP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="container mt-5">
 
-  <h2>Cadastro com Busca de CEP</h2>
+  <h2>Cadastro de Endereço</h2>
 
   <form>
     <div class="mb-3">
@@ -20,8 +21,11 @@
       <label for="endereco" class="form-label">Endereço:</label>
       <input type="text" class="form-control" id="endereco" placeholder="Endereço completo" readonly>
     </div>
+
+    <!-- Aqui você pode adicionar outros campos do seu formulário -->
   </form>
 
+  <!-- Carregando o JavaScript -->
   <script src="app.js"></script>
 </body>
 </html>
