--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Cadastro com Busca de CEP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Biblioteca de máscara -->
+  <script src="https://unpkg.com/imask"></script>
 </head>
 <body class="container mt-5">
 
@@ -13,8 +15,8 @@
   <form>
     <div class="mb-3">
       <label for="cep" class="form-label">CEP:</label>
-      <input type="text" class="form-control" id="cep" placeholder="Digite o CEP" maxlength="9"
-             oninput="buscarCEP()" onblur="buscarCEP()">
+      <input type="text" class="form-control" id="cep" placeholder="00000-000"
+             maxlength="9" oninput="buscarCEP()" onblur="buscarCEP()">
     </div>
 
     <div class="mb-3">
@@ -22,12 +24,10 @@
       <input type="text" class="form-control" id="endereco" placeholder="Endereço completo" readonly>
     </div>
 
-    <!-- Aqui você pode adicionar outros campos do seu formulário -->
+    <!-- Adicione mais campos conforme o seu formulário -->
   </form>
 
-  <!-- Carregando o JavaScript -->
+  <!-- Arquivo JavaScript do projeto -->
   <script src="app.js"></script>
- <script src="https://unpkg.com/imask"></script>
-
 </body>
 </html>
