--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <title>Cadastro com Busca de CEP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Biblioteca de máscara -->
-  <script src="https://unpkg.com/imask"></script>
 </head>
 <body class="container mt-5">
 
@@ -15,8 +13,8 @@
   <form>
     <div class="mb-3">
       <label for="cep" class="form-label">CEP:</label>
-      <input type="text" class="form-control" id="cep" placeholder="00000-000"
-             maxlength="9" oninput="buscarCEP()" onblur="buscarCEP()">
+      <input type="text" class="form-control" id="cep" placeholder="Digite o CEP" maxlength="9"
+             oninput="buscarCEP()" onblur="buscarCEP()">
     </div>
 
     <div class="mb-3">
@@ -24,10 +22,10 @@
       <input type="text" class="form-control" id="endereco" placeholder="Endereço completo" readonly>
     </div>
 
-    <!-- Adicione mais campos conforme o seu formulário -->
+    <!-- Aqui você pode adicionar outros campos do seu formulário -->
   </form>
 
-  <!-- Arquivo JavaScript do projeto -->
+  <!-- Carregando o JavaScript -->
   <script src="app.js"></script>
 </body>
 </html>
